修正 provided 使用错误 修改applicationId,暂不编译 jni 文件
android gradle dsl 已经支持 provided scope了。
增加自定义字段的 buildNumber

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ZjDroid</string>
+    <string name="app_name">UpDroid</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">ZjDroid是基于Xposed Framewrok的动态逆向分析模块</string>
 
